syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package =".;proto";

service User{
  rpc GetUserList(PageInfo) returns (UserListResponse);//用户列表
  rpc GetUserByMobile(UserMobileRequest) returns (UserInfoResponse);//用户手机号
  rpc GetUserById(IdRequest) returns (UserInfoResponse);//用户id
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);//创建用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);//更新用户
  rpc CheckPassword(CheckPasswordInfo)returns(CheckResponse);//校验密码

}

message CheckResponse{
  bool success = 1;
}

message CheckPasswordInfo{
  string password = 1;
  string encryptedPassword = 2;
}

message UpdateUserInfo{
  int32 id=1;
  string nickName =2;
  string gender =3;
  uint64 birthday=4;
}


message CreateUserInfo{
  string nickName =1;
  string password = 2;
  string mobile = 3;
}

message IdRequest{
  int32 id = 1;
}
message UserMobileRequest{
  string mobile = 1;
}

message PageInfo{
  uint32 Pn = 1;
  uint32 pSize = 2;
}
//用户信息
message UserInfoResponse{
  int32 id =1;
  string password =2;
  string mobile =3;
  string nickName =4;
  uint64  birthday =5;
  string gender = 6;
  int32 role =7;
}

//用户列表信息
message UserListResponse{
  int32 total =1;
  repeated UserInfoResponse data =2;
}