syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package ="./proto;proto";

//定义商品服务
service Goods{
  //获取商品列表
  rpc GoodsList(GoodsFilterRequest) returns(GoodsListResponse);
  //获取批量商品信息
  rpc BatchGetGoods(BatchGetGoodsInfo) returns(GoodsListResponse);
  //商品的CRUD
  rpc CreateGoods(CreateGoodsInfo) returns(GoodsInfoResponse);
  rpc GetGoodsDetail(GoodInfoRequest)returns(GoodsInfoResponse);
  rpc UpdateGoods(CreateGoodsInfo)returns(google.protobuf.Empty);
  rpc DeleteGoods(DeleteGoodsInfo)returns(google.protobuf.Empty);

  //商品分类
  rpc GetAllCategorysList(google.protobuf.Empty)returns(CategoryListResponse);
  //获取商品子分类列表
  rpc GetSubCategory(CategoryListRequest)returns(SubCategoryListResponse);
  //创建商品分类
  rpc CreateCategory(CategoryInfoRequest)returns(CategoryInfoResponse);
  //删除商品分类
  rpc DeleteCategory(DeleteCategoryRequest)returns(google.protobuf.Empty);
  //更新商品分类信息
  rpc UpdateCategory(CategoryInfoRequest)returns(google.protobuf.Empty);

  //品牌
  rpc BrandList(BrandFilterRequest)returns(BrandListResponse);//批量获取品牌信息
  rpc CreateBrand(BrandRequest)returns(BrandInfoResponse);//创建品牌
  rpc DeleteBrand(BrandRequest)returns(google.protobuf.Empty);//删除品牌
  rpc UpdateBrand(BrandRequest)returns(google.protobuf.Empty);//更新品牌

  //轮播图
  rpc BannerList(google.protobuf.Empty)returns(BannerListResponse);//获取轮播图列表
  rpc CreateBanner(BannerRequest)returns(BannerResponse);//创建轮播图
  rpc DeleteBanner(BannerRequest)returns(google.protobuf.Empty);//删除轮播图
  rpc UpdateBanner(BannerRequest)returns(google.protobuf.Empty);//更新轮播图

  //品牌分类
  rpc CategoryBrandList(CategoryBrandFilterRequest)returns(CategoryBrandListResponse);//获取品牌分类列表
  rpc GetCategoryBrandList(CategoryInfoRequest)returns(BrandListResponse);//通过分类获取品牌
  rpc CreateCategoryBrand(CategoryBrandRequest)returns(CategoryBriefInfoResponse);//创建品牌分类
  rpc DeleteCategoryBrand(CategoryBrandRequest)returns(google.protobuf.Empty);//删除品牌分类
  rpc UpdateCategoryBrand(CategoryBrandRequest)returns(google.protobuf.Empty);//更新品牌分类



}
//创建商品请求
//可以通过价格期间过滤，是否为热点商品，是否是新商品，是否是Tab页面展示
//包含分页信息
//品牌名称
//关键词
message GoodsFilterRequest {
  int32 priceMin = 1;
  int32 priceMax = 2;
  bool isHot = 3;
  bool isNew = 4;
  bool isTab = 5;
  int32 topCategory = 6;
  int32 pages = 7;
  int32 pagePerNums = 8;
  string keywords = 9;
  int32 brand = 10;

}
//商品列表响应
message GoodsListResponse {
  int32 total =1;
  repeated GoodsInfoResponse data = 2;

}
//批量获取商品信息
message BatchGetGoodsInfo {
  repeated int32 id = 1;
}

//创建商品请求
message CreateGoodsInfo {
  int32 id = 1;
  string name = 2;
  string goodsSn = 3;
  int32 stocks =7;//库存
  float marketPrice = 8;
  float shopPrice = 9;
  string goodsBrief = 10;
  string goodsDesc = 11;
  bool shipFree = 12;
  repeated string images = 13;
  repeated string descImages = 14;
  string goodsFrontImage = 15;
  bool isNew = 16;
  bool isHot = 17;
  bool onSale = 18;
  int32 categoryId = 19;
  int32 brandId = 20;

}
//商品信息响应
message GoodsInfoResponse {
  int32 id = 1;
  int32 categoryId = 2;
  string name =3;
  string goodsSn = 4;
  int32 clickNum = 5;
  int32 soldNum = 6;
  int32 favNum = 7;
  float marketPrice =9;
  float shopPrice = 10;
  string goodsBrief = 11;
  string goodsDesc = 12;
  bool shipFree = 13;
  repeated string  images = 14;
  repeated string descImages = 15;
  string goodsFrontImage = 16;
  bool isNew = 17;
  bool isHot = 18;
  bool onSale = 19;
  int64 addTime = 20;
  CategoryBriefInfoResponse category = 21;
  BrandInfoResponse brand =22;


}
//商品信息请求
message GoodInfoRequest {
  int32  id =1;

}
//删除商品请求
message DeleteGoodsInfo {
  int32 id =1;

}
//商品分类列表响应
message CategoryListResponse {
  int32 total =1;
  repeated CategoryInfoResponse data = 2;
  string jsonData=3;

}
//商品分类列表请求
message CategoryListRequest {
  int32 id=1;
  int32 level=2;
}
//商品子分类列表响应
message SubCategoryListResponse {
  int32 total=1;
  CategoryInfoResponse info=2;
  repeated CategoryInfoResponse subCategorys =3;
}
//商品分类信息请求
message CategoryInfoRequest {
  int32 id = 1;
  string name = 2;
  int32 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}
//商品分类信息响应
message CategoryInfoResponse {
  int32  id=1;
  string name=2;
  int32 parentCategory=3;
  int32 level=4;
  bool isTab=5;

}
//删除商品分类请求
message DeleteCategoryRequest {
  int32 id=1;
}
//商品外键CategoryBirefInfoResponse
message CategoryBriefInfoResponse{
  int32 id=1;
  string name =2;
}
//带过滤的分类请求
message CategoryFilterRequest{
  int32 id=1;
  bool isTab =2;

}

//banner请求信息
message BannerRequest{
  int32 id=1;
  int32 index =2;
  string image =3;
  string url =4;
}
//banner 响应信息
message BannerResponse{
   int32 id=1;
   int32 index =2;
   string image =3;
   string url =4;
}
message BannerListResponse{
  int32 total=1;
  repeated BannerResponse data =2;
}




//品牌响应信息
message BrandInfoResponse{
  int32 id=1;
  string name =2;
  string logo =3;
}
//品牌
message BrandFilterRequest{
  int32 page=1;
  int32 pagePerNums =2;
}
//品牌请求信息
message BrandRequest{
  int32 id=1;
  string name =2;
  string logo =3;
}
//批量响应
message BrandListResponse{
  int32 total=1;
  repeated BrandInfoResponse data =2;
}



//分类获得品牌请求信息
message CategoryBrandRequest{
  int32 id=1;
  int32 categoryId =2;
  int32 brandId =3;
}

//分类获得品牌请求信息，过滤器
message CategoryBrandFilterRequest{
  int32 pages=1;
  int32 pagePerNums =2;
}
//分类获得品牌响应信息
message CategoryBrandInfoResponse{
  int32 id=1;
  BrandInfoResponse brand =2;
  CategoryInfoResponse category=3;
}
//分类获得品牌响应信息
message CategoryBrandListResponse{
  int32 total=1;
  repeated CategoryBrandInfoResponse data =2;
}


